# ai-chat-playground

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  WEB_SEARCH_PLAN.md  app.py  format.sh  pyproject.toml  requirements-prod.txt  requirements.txt  setup.py  test.sh
.cursor/rules/: centralized-config.mdc  services-container.mdc  solution-validation.mdc  tests-structure.mdc
components/: __init__.py  chat_input.py  message_display.py  new_conversation.py  recent_conversations.py  sidebar_settings.py  system_prompt_editor.py
conversations/: __init__.py  manager.py  utils.py
conversations/models/: __init__.py  models.py
conversations/personas/: __init__.py  personas.py
conversations/types/: __init__.py  enums.py
core/: __init__.py  bootstrap.py  config.py  container.py
docker/: .dockerignore  Dockerfile  build.sh  docker-compose.yml  local.yml
integrations/: __init__.py
integrations/openai/: README.md  __init__.py  client.py  example.py
integrations/search/: __init__.py  duckduckgo_client.py  exceptions.py
integrations/web_search/: __init__.py  search_tool.py
persistence/: __init__.py  mongo_repository.py  vector_store.py
pipelines/: pdf_ingest_service.py
scripts/: build.sh  cleanup.sh  format.sh  start_dependencies.sh
tests/unit/: test_with_di.py
tests/unit/app/: test_components.py  test_conversation.py  test_messages.py  test_persona_system_prompt.py
tests/unit/conversations/: test_conversations.py
tests/unit/core/: test_container.py
tests/unit/integrations/search/: test_duckduckgo_client.py
tests/unit/integrations/web_search/: test_web_search.py
tests/unit/pipelines/: test_pdf_ingest_service.py
tests/unit/tools/: test_web_search_integration.py
tools/: __init__.py
tools/web_search/: __init__.py  exceptions.py  models.py  search_tool.py
tools/web_search/models/: input.py  models.py  output.py  request.py  result.py
